--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@
             <label for="player2-name-input">Player 2 Name:</label>
             <input type="text" id="player2-name-input" value="Jason">
         </div>
+        <div>
+            <label for="player3-name-input">Player 3 Name:</label>
+            <input type="text" id="player3-name-input" value="Sarah">
+        </div>
+        <div>
+            <label for="player4-name-input">Player 4 Name:</label>
+            <input type="text" id="player4-name-input" value="Emily">
+        </div>
         <div id="player1" class="player">
             <h2>Player 1: <span id="player1-name">Patrick</span></h2>
             <p>Score: <span id="player1-score">0</span></p>
@@ -61,6 +69,26 @@
                 <button class="hand-choice" data-player="2" data-hand="scissors"><i class="fas fa-hand-scissors hand-icon"></i></button>
             </div>
             <div>Chosen hand: <span id="player2-chosen-hand"></span></div>
+        </div>
+        <div id="player3" class="player">
+            <h2>Player 3: <span id="player3-name">Sarah</span></h2>
+            <p>Score: <span id="player3-score">0</span></p>
+            <div class="choices">
+                <button class="hand-choice" data-player="3" data-hand="rock"><i class="fas fa-hand-rock hand-icon"></i></button>
+                <button class="hand-choice" data-player="3" data-hand="paper"><i class="fas fa-hand-paper hand-icon"></i></button>
+                <button class="hand-choice" data-player="3" data-hand="scissors"><i class="fas fa-hand-scissors hand-icon"></i></button>
+            </div>
+            <div>Chosen hand: <span id="player3-chosen-hand"></span></div>
+        </div>
+        <div id="player4" class="player">
+            <h2>Player 4: <span id="player4-name">Emily</span></h2>
+            <p>Score: <span id="player4-score">0</span></p>
+            <div class="choices">
+                <button class="hand-choice" data-player="4" data-hand="rock"><i class="fas fa-hand-rock hand-icon"></i></button>
+                <button class="hand-choice" data-player="4" data-hand="paper"><i class="fas fa-hand-paper hand-icon"></i></button>
+                <button class="hand-choice" data-player="4" data-hand="scissors"><i class="fas fa-hand-scissors hand-icon"></i></button>
+            </div>
+            <div>Chosen hand: <span id="player4-chosen-hand"></span></div>
         </div>
         <div id="result"></div>
         <button id="play-game">Play Game</button>
